# pmr

./: .gitignore  README.md
include/pmr/: deque.h  forward_list.h  list.h  map.h  memory_resource.h  memory_resource_feature.h  pmr.h  regex.h  set.h  string.h  unordered_map.h  unordered_set.h  vector.h
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/include/pmr/: deque.h  map.h  memory_resource_feature.h  set.h  unordered_map.h  vector.h
